Avoid using root-level generics to avoid serialization issues with polymorphic type information (for ExtensionAttributes)
Signed-off-by: BOUHOURS Antoine <antoine.bouhours@rte-france.com>