@@ -7,57 +7,33 @@
 package com.powsybl.network.store.model;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonProperty;
-import com.google.common.collect.ImmutableList;
 import io.swagger.v3.oas.annotations.media.Schema;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 
 /**
  * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
  */
 @Schema(description = "Top level document compliant with Json API spec")
-public class TopLevelDocument<T> {
-
-    @Schema(description = "data", required = true)
-    private final List<T> data;
-
-    @Schema(description = "Metadata")
-    @JsonInclude(JsonInclude.Include.NON_NULL)
-    private final Map<String, String> meta;
+public class TopLevelDocument<T extends IdentifiableAttributes> extends AbstractTopLevelDocument<Resource<T>> {
 
     @JsonCreator
-    public TopLevelDocument(@JsonProperty("data") List<T> data, @JsonProperty("meta") Map<String, String> meta) {
-        this.data = Objects.requireNonNull(data);
-        this.meta = meta;
+    public TopLevelDocument(@JsonProperty("data") List<Resource<T>> data, @JsonProperty("meta") Map<String, String> meta) {
+        super(data, meta);
     }
 
-    public static <T> TopLevelDocument<T> empty() {
-        return new TopLevelDocument<>(ImmutableList.of(), new HashMap<>());
+    public static <T extends IdentifiableAttributes> TopLevelDocument<T> empty() {
+        return new TopLevelDocument<>(List.of(), new HashMap<>());
     }
 
-    public static <T> TopLevelDocument<T> of(T data) {
-        return new TopLevelDocument<>(ImmutableList.of(data), new HashMap<>());
+    public static <T extends IdentifiableAttributes> TopLevelDocument<T> of(Resource<T> data) {
+        return new TopLevelDocument<>(List.of(data), new HashMap<>());
     }
 
-    public static <T> TopLevelDocument<T> of(List<T> data) {
+    public static <T extends IdentifiableAttributes> TopLevelDocument<T> of(List<Resource<T>> data) {
         return new TopLevelDocument<>(data, new HashMap<>());
-    }
-
-    public List<T> getData() {
-        return data;
-    }
-
-    public Map<String, String> getMeta() {
-        return meta;
-    }
-
-    public TopLevelDocument<T> addMeta(String name, String value) {
-        meta.put(name, value);
-        return this;
     }
 }
